Cloud/k8s_learning/deployment_v2_bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellok8s-deployment
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 3
  selector:
    matchLabels:
      app: hellok8s
  template:
    metadata:
      labels:
        app: hellok8s
    spec:
      containers:
      - image: zoeimport/hellok8s:bad
        name: hellok8s-container
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 1
          periodSeconds: 3
          successThreshold: 5
          failureThreshold: 3
