Cloud/k8s_learning/hellok8s.yaml
# hellok8s.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hellok8s
spec:
  containers:
  - name: hellok8s-container
    image: zoeimport/hellok8s:v2
