Cloud/k8s_learning/service-hellok8s-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-hellok8s-clusterip
spec:
  type: ClusterIP
  externalIPs:
  - 192.168.1.100
  selector:
    app: hellok8s
  ports:
  - port: 3000
    targetPort: 3000
