Cloud/k8s_learning/service-hellok8s-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-hellok8s-nodeport
spec:
  type: NodePort
  selector:
    app: hellok8s
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30001
    protocol: TCP
