Cloud/k8s_learning/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: service-hellok8s-clusterip
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-nginx-clusterip
            port:
              number: 4000
